--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+
+  /* forzar tema claro */
 }
 
 @layer base {
@@ -38,7 +40,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
-  .dark {
+  /* .dark {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
@@ -63,7 +65,7 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-  }
+  } */
 }
 
 @layer base {
